--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,6 +33,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./HelloProj-0.0.${{ github.run_number }}-Linux.deb
+          asset_path: ./packages/HelloProj-0.0.${{ github.run_number }}-Linux.deb
           asset_name: HelloProj-0.0.${{ github.run_number }}-Linux.deb
           asset_content_type: application/vnd.debian.binary-package
